--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 </head>
 <body>
   <h1>Electron Auto Update Example</h1>
+  <p>
+    <a href="https://epos.uz" target="_blank">www.epos.uz</a>
+  </p>
   <p id="version"></p>
 
   <!-- Auto updater -->
